--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Escape Goat | Naperville Cover Band</title>
+  <link rel="stylesheet" href="assets/style.css">
+</head>
+<body>
+  <header>
+    <h1>Escape Goat</h1>
+    <p>Naperville's Premier Rock Cover Band</p>
+  </header>
 
+  <section id="shows">
+    <h2>Upcoming Shows</h2>
+    <ul>
+      <li>Sept 14, 2025 – Quigley’s Irish Pub – Naperville, IL</li>
+      <li>Oct 5, 2025 – Two Brothers Roundhouse – Aurora, IL</li>
+    </ul>
+  </section>
+
+  <section id="photos">
+    <h2>Photo Gallery</h2>
+    <img src="assets/photo1.jpg" alt="Escape Goat live">
+    <img src="assets/photo2.jpg" alt="Band members">
+  </section>
+
+  <section id="contact">
+    <h2>Contact & Social</h2>
+    <p>Email: <a href="mailto:escapegoatband@gmail.com">escapegoatband@gmail.com</a></p>
+    <p>
+      <a href="https://instagram.com/escapegoatband">Instagram</a> |
+      <a href="https://facebook.com/escapegoatband">Facebook</a> |
+      <a href="https://youtube.com/@escapegoatband">YouTube</a>
+    </p>
+  </section>
+
+  <footer>
+    <p>© 2025 Escape Goat</p>
+  </footer>
+</body>
+</html>
